# UncleFu

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md  adding_a_personality.md  decisions.md  ideas.md  learnings.md  lite_v2_speculative.md  sprite_design.md  voice_design.md
packaging/: build.py  unclefu  venvstacks.toml
src/unclefu/: __init__.py  __main__.py  permissions.py  personalities.py  preflight.py
src/unclefu/assets/personalities/: README.md
src/unclefu/assets/personalities/uncle_fu/: README.md
src/unclefu/capture/: screen.py  webcam.py
src/unclefu/director/: context.py  director.py  focus_classifier.py  prompts.py
src/unclefu/intervene/: intervener.py
src/unclefu/runtime/: battery.py  runner.py  thread.py
src/unclefu/sensors/: prompts.py  screen_sensor.py  webcam_sensor.py
src/unclefu/storage/: debug_log.py  session_log.py
src/unclefu/tts/: speaker.py
src/unclefu/ui/: menubar.py
src/unclefu/vlm/: client.py  download_progress.py  schema.py
tests/smoke/: test_downsample_probe.py  test_focus_classifier.py  test_qwen_threading.py  test_qwen_voices.py  test_screen.py  test_vlm.py  test_webcam.py
tests/unit/: test_battery.py  test_context.py  test_debug_log.py  test_intervener.py  test_menubar.py  test_personalities.py  test_preflight.py  test_prompts.py  test_schema.py  test_storage.py
