[project]
name = "unclefu"
version = "0.1.0"
description = "Local-only macOS menu-bar focus companion with a personality."
requires-python = ">=3.12"
dependencies = [
    "mlx-audio>=0.4.3",
    "mlx-vlm>=0.5.0",
    "mss>=10.2.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyobjc-core>=12.1",
    "pyobjc-framework-avfoundation>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-coremediaio>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "rumps>=0.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unclefu"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q"

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
